--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
     "iron-input": "PolymerElements/iron-input#^1.0.10",
-    "iron-validator-behavior": "PolymerElements/iron-validator-behavior#^1.0.1"
+    "iron-validator-behavior": "PolymerElements/iron-validator-behavior#^1.0.1",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
